# parser_selenium

./: README.md  pyproject.toml  pytest.ini
evosoft/pages/: base_page.py  locators.py  main_page.py  market_watch_page.py  pre_open_market_page.py  web_driver.py
evosoft/tests/: conftest.py  test_parser.py  test_user_simulation.py
