[tool.poetry]
name = "evosoft"
version = "0.1.0"
description = ""
authors = ["Evgeniy V. <volochek93@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.18.1"
pytest = "^8.1.1"
pytest-rerunfailures = "^13.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
